<resources>
    <string name="app_name">DoSoptTemplate</string>
    <string name="application_terminate">\'뒤로\' 버튼 한 번 더 누르면 종료됩니다.</string>
    <string name="binding_error">에러가 발생했습니다</string>

    <!-- 로그인 페이지 -->
    <string name="login_title">Welcome to SOPT</string>
    <string name="login_id">ID</string>
    <string name="login_id_hint">아이디를 입력해주세요</string>
    <string name="login_pw">PW</string>
    <string name="login_pw_hint">비밀번호를 입력해주세요</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_signup">회원가입</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_fail">로그인 실패</string>
    <string name="login_auto">로그인 상태 유지</string>

    <!-- 회원가입 페이지 -->
    <string name="signup_title">SIGN UP</string>
    <string name="signup_nickname">닉네임</string>
    <string name="signup_nickname_hint">닉네임을 입력해주세요</string>
    <string name="signup_id">ID</string>
    <string name="signup_id_hint">아이디를 입력해주세요</string>
    <string name="signup_pw">PW</string>
    <string name="signup_pw_hint">비밀번호를 입력해주세요</string>
    <string name="signup_mbti">MBTI</string>
    <string name="signup_mbti_hint">MBTI를 입력해주세요</string>
    <string name="signup_complete">완료</string>
    <string name="signup_complete_message">회원가입이 완료되었습니다</string>
    <string name="signup_error_message">올바른 정보를 입력해주세요</string>
    <string name="signup_fail_message">회원가입에 실패하였습니다.</string>
    <string name="signup_id_error">숫자와 영문자 조합으로 6~10자를 사용해주세요</string>
    <string name="signup_pw_error">영문,숫자, 특수문자를 포함한 6~12글자 이내를 사용해주세요</string>
    <string name="signup_id_empty">id를 입력해주세요</string>
    <string name="signup_pw_empty">pw를 입력해주세요</string>
    <!-- 메인 페이지 -->
    <string name="mainpage_id">ID</string>
    <string name="mainpage_mbti">MBTI</string>
    <string name="mainpage_description">아 졸려어어어어어어ㅓ어어어어어어ㅓ어엉어ㅓㅇ엉</string>
    <string name="mainpage_logout"><u>로그아웃</u></string>

    <!-- 홈 화면 -->
    <string name="home_gift">선물하기</string>
    <string name="home_add_state_message">상태 메세지 +</string>
    <string name="home_add_name">이름</string>
    <string name="home_add_music">음악</string>
    <string name="home_add_name_hint">이름을 입력해주세요</string>
    <string name="home_add_music_hint">음악을 입력해주세요</string>
    <string name="home_add_birthday">생일</string>
    <string name="home_add_ok">확인</string>

    <!-- 다이얼로그 -->
    <string name="dialog_cancel_text">취소</string>
    <string name="dialog_apply_text">확인</string>
    <string name="dialog_home_user_delete_title">정말로 삭제하시겠습니까?</string>
    <string name="dialog_date_format">%04d%02d%02d</string>

    <!-- 바텀 네비게이션 -->
    <string name="bnv_android">DO ANDROID</string>
    <string name="bnv_home">홈</string>
    <string name="bnv_mypage">마이페이지</string>
    <string name="bnv_follower">팔로워</string>

    <!-- 팔로워 페이지 -->
    <string name="follower_fail_text">팔로워 리스트 불러오기 실패</string>

</resources>