<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signupViewModel"
            type="org.sopt.dosopttemplate.presentation.auth.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.SignUpActivity">

        <TextView
            android:id="@+id/tv_signup_title"
            style="@style/Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/signup_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_signup_end"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_signup_name"
                    style="@style/Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/signup_nickname"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_signup_name"
                    style="@style/Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/signup_nickname_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={signupViewModel.nickname}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_name" />

                <TextView
                    android:id="@+id/tv_signup_nickname_error_message"
                    style="@style/Caption2"
                    setSignupZeroErrorTextVisible="@{signupViewModel.nicknameLength}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_nickname_empty"
                    android:textColor="@color/Pink_500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/et_signup_name"
                    app:layout_constraintTop_toBottomOf="@+id/et_signup_name" />

                <TextView
                    android:id="@+id/tv_signup_id"
                    style="@style/Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/signup_id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_signup_name" />


                <EditText
                    android:id="@+id/et_signup_id"
                    style="@style/Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/signup_id_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={signupViewModel.id}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_id" />

                <TextView
                    android:id="@+id/tv_signup_id_error_message"
                    style="@style/Caption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_id_error"
                    android:textColor="@color/Pink_500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/et_signup_id"
                    app:layout_constraintTop_toBottomOf="@+id/et_signup_id" />

                <TextView
                    android:id="@+id/tv_signup_pw"
                    style="@style/Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/signup_pw"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_signup_id" />

                <EditText
                    android:id="@+id/et_signup_pw"
                    style="@style/Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/signup_pw_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="@={signupViewModel.pw}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_pw" />

                <TextView
                    android:id="@+id/tv_signup_password_error_message"
                    style="@style/Caption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_pw_error"
                    android:textColor="@color/Pink_500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/et_signup_pw"
                    app:layout_constraintTop_toBottomOf="@+id/et_signup_pw" />

                <TextView
                    android:id="@+id/tv_signup_mbti"
                    style="@style/Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/signup_mbti"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_signup_pw" />

                <EditText
                    android:id="@+id/et_signup_mbti"
                    style="@style/Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/signup_mbti_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text="@={signupViewModel.mbti}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_mbti" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_signup_end"
            style="@style/Subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="40dp"
            android:enabled="false"
            android:text="@string/signup_complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>