<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.HomeActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_mainpage_profil"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Circle" />

        <TextView
            android:id="@+id/tv_mainpage_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_mainpage_profil"
            app:layout_constraintStart_toEndOf="@id/iv_mainpage_profil"
            app:layout_constraintTop_toTopOf="@id/iv_mainpage_profil"
            tools:text="이준희" />

        <TextView
            android:id="@+id/tv_mainpage_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/mainpage_description"
            app:layout_constraintBottom_toBottomOf="@+id/tv_mainpage_nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_mainpage_nickname"
            app:layout_constraintTop_toTopOf="@id/tv_mainpage_nickname" />

        <TextView
            android:id="@+id/tv_mainpage_id_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/mainpage_id"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/iv_mainpage_profil"
            app:layout_constraintTop_toBottomOf="@id/iv_mainpage_profil" />

        <TextView
            android:id="@+id/tv_mainpage_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/grey_04"
            app:layout_constraintStart_toStartOf="@id/tv_mainpage_id_title"
            app:layout_constraintTop_toBottomOf="@id/tv_mainpage_id_title"
            tools:text="alkfmd" />

        <TextView
            android:id="@+id/tv_mainpage_mbti_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/mainpage_mbti"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/tv_mainpage_id"
            app:layout_constraintTop_toBottomOf="@id/tv_mainpage_id" />

        <TextView
            android:id="@+id/tv_mainpage_mbti"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/grey_04"
            app:layout_constraintStart_toStartOf="@id/tv_mainpage_mbti_title"
            app:layout_constraintTop_toBottomOf="@id/tv_mainpage_mbti_title"
            tools:text="alkfmd" />

        <TextView
            android:id="@+id/tv_mainpage_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/mainpage_logout"
            android:textColor="@color/grey_05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mainpage_mbti" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>